# gen_tcp

./: .gitignore  README.md  gen_tcp.code-workspace  mix.exs  test.exs
lib/: gen_tcp.ex
lib/gen_tcp/: erlang.ex  native.ex  router.ex
lib/gen_tcp/router/: route.ex
native/gen_tcp_native/: Cargo.toml  README.md
native/gen_tcp_native/src/: lib.rs
test/: gen_tcp_test.exs
